--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
+<html>
 <Head>
+    <title>Maydof's Beauty Parlour</title>
     <link href="myword.css" rel="stylesheet" type="text/css"/>
 </Head>
 <body>
@@ -130,4 +132,4 @@
 </div>
     </footer>
 </body>
-
+</html>
