--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Maydof's Beauty Parlour</title>
-        <link rel="stylesheet" href="./home.css" type="text/css">
+        <link rel="stylesheet" href="./myword.css" type="text/css">
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Pacifico&display=swap" rel="stylesheet">
     </head>
     <body>
