--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
         </div>
         <div class="main">
             <main>
-            <h2>Maydof's Exclusive Services</h2>
+            <div class="service">
+                <h2>Maydof's Exclusive Services</h2>
+                <p>Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your</p>
+            </button><a class="appointment-button" href="">Make Appointment</a></button>
+            </div>
             <div class="image-holder">
                 <img src="./image-10.jpg" alt="">
                 <img src="./image-10.jpg" alt="">
