--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>BraidyTreats</title>
-        <link rel="stylesheet" href="./myword.css" type="text/css">
+        <link rel="stylesheet" href="./BraidyTreats.css" type="text/css">
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Sofia&display=swap" rel="stylesheet">
@@ -10,7 +10,7 @@
     <body>
         <div class="container">
             <nav class="navigation">
-                <button>Make Appointment</button>
+                <button><a href="https://calendar.app.google/vs6BeM7VC1T7oH1M6">Make Appointment</a></button>
             </nav>
             <div class="banner">
                 <img src="sitebanner.jpg" alt="site banner">
@@ -18,17 +18,19 @@
                 <h2 class="site-mantra">Where every strand weaves elegance...</h2>
             </div>
             <div class="welcome-section">
-                    <h2>Welcome !</h2>
+                    <h2>Welcome !</h2><br>
                 <div>
-                    <p>Welcome to BraidyTreats, your premier text-based salon nestled in Guelph heart of Ontario, Canada. At BraidyTreats, we redefine the salon experience, embracing a unique approach to booking and service. </p>
+                    <p>Welcome to BraidyTreats! Step into a realm where beauty meets perfection. At BraidyTreats, we're not just about hairstyles; we're about crafting exquisite experiences tailored just for you. </p> <br>
+                    <p>Indulge in our signature services, where affordability meets luxury. We pride ourselves on offering the finest quality braids at prices that won't break the bank. From sleek and sophisticated to bold and beautiful.</p><br>
+                    <p>Come, experience the magic of BraidyTreats. Your journey to hair perfection begins here!</p><br>
                 </div>
             </div>
             <div class="services-section">
                 <div class="services-container">
                     <div class="services-description">
-                        <h2>BraidTreats Exclusive Services</h2>
-                        <p>Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your Get your</p>
-                        </button><a class="appointment-button" href="">Make Appointment</a></button>
+                        <h2>BraidyTreats Exclusive Services</h2>
+                        <p>At BraidyTreats, we specialize in the artistry of hair braiding, offering a wide range of services to suit every style and occasion. Our skilled stylists are dedicated to creating stunning looks that exceed your expectations. Our offers include Box Braids, Knotless, Twists, Conrows, and many others.</p>
+                        </button><a class="appointment-button" href="https://calendar.app.google/vs6BeM7VC1T7oH1M6">Make Appointment</a></button>
                     </div>
                     <div class="service-images-grid">
                         <img src="image-10.jpg" alt="">
@@ -120,16 +122,26 @@
             <div class="contact-and-location">
                 <div class="contact">
                     <h3>Contact Us</h3>
-                    <p></p>
-                    <button></button>
+                    <p>We are open by <strong>Appointment Only</strong>. Book now! </p>
+                    <button><a href="https://calendar.app.google/vs6BeM7VC1T7oH1M6" target="_blank">Appointment</a></button>
                     <p>Follow on Instagram</p>
+                    <div id="instagram">
+                        <a href="https://www.instagram.com/braidytreats/" target="_blank">BraidyTreats IG</a>
+                        <a href="https://www.instagram.com/braidytreats/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Instagram_logo_2022.svg" alt="Instagram Logo"></a>
+                    </div>
+                    <div id="whatsapp">
+                        <a href="https://wa.me/15197319231" target="_blank">Whatsapp BraidyTreats</a>
+                        <a href="https://wa.me/15197319231" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/2044px-WhatsApp.svg.png" alt="Whatsapp logo"></a>
+                    </div>
                 </div>
                 <div class="location">
-                    <h3>Locate Us</h3>
-                    <p>We are located...</p>
+                    <h3>Location</h3>
+                    <p>1 Hales Cres</p>
+                    <p>Guelph ON NIG 1p4</p>
+                    <p>Canada</p>
                 </div>
             </div>
-            <footer></footer>
+            <footer> </footer>
         </div>
     </body>
 </html>
