--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                         <img src="image-9.jpg" alt="">
                         <img src="image-10.jpg" alt="">
                         <img src="back.jpg" alt="">
+                        <img src="image-11.jpg" alt="">
                     </div>
                 </div>
             </div>
