--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <td>Shoulder</td>
                             <td>Midback</td>
                             <td>Waist</td>
-                            <td>But</td>
+                            <td>Butt</td>
                         </tr>
                         <tr>
                             <td class="column">Box Braids</td>
@@ -138,7 +138,7 @@
                 <div class="location">
                     <h3>Location</h3>
                     <p>1 Hales Cres</p>
-                    <p>Guelph ON NIG 1p4</p>
+                    <p>Guelph ON NIG 1P4</p>
                     <p>Canada</p>
                 </div>
             </div>
