--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>BraidyTreats</title>
+        <meta name="google-site-verification" content="XUCCL3w9WsZtWzyo78MpkdkjKgGPkcKZPrO71O5HXOo" />
         <link rel="stylesheet" href="./BraidyTreats.css" type="text/css">
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
