--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <footer> </footer>
         </div>
         <script>
-            // JavaScript for sliding images in the banner section
+            /* JavaScript for sliding images in the banner section
             document.addEventListener('DOMContentLoaded', function() {
             // Get all banner images
             var images = document.querySelectorAll('.banner img');
@@ -160,11 +160,11 @@
                 currentImageIndex = (currentImageIndex + 1) % images.length;
                 // Show the next image
                 images[currentImageIndex].style.display = 'block';
-            }
+            } 
 
             // Automatically show next image every 5 seconds
             setInterval(showNextImage, 5000);
-            });
+            }); */
 
 
 
